Fix select in permission modal cutting off text

--- a/app-frontend/src/assets/styles/sass/components/_permissions-modal.scss
+++ b/app-frontend/src/assets/styles/sass/components/_permissions-modal.scss
@@ -82,7 +82,7 @@ rf-permission-item {
             margin-right: 0.5em;
             align-self: center;
             height: 3rem;
-            padding: 1rem 2rem;
+            padding: 3px 12px;
         }
         button {
             align-self: center;
